# bayesian-var

./: .gitignore  Bvars.ipynb  Dockerfile  README.md  Tes-Bills Final.xlsx  pyproject.toml  requirements.txt
notebooks/: Bvars.ipynb
scripts/: bvar_fit.py  bvar_infer.py
src/bvar/: __init__.py  data.py  design.py  fevd.py  irf.py  marginal.py  plots.py  posterior.py  priors.py
tests/: test_design.py  test_irf_fevd.py  test_priors.py
