[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bvar"
version = "0.1.0"
description = "Bayesian VAR with conjugate Minnesota priors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Bayesian VAR contributors" }]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
